--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
     </dl>
     <article class="wide">
         <h1>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</h1>
-        <aside id="article_extras">
+        <div style="display:inline-block"><aside id="article_extras">
             <div data-backend-url="/shariff/?foo=bar" class="shariff" data-orientation="vertical"></div>
         </aside>
         <section id="article_content">
             <p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way. When she reached the first hills of the Italic Mountains, she had a last view back on the skyline of her hometown Bookmarksgrove, the headline of Alphabet Village and the subline of her own road, the Line Lane. </p>
-        </section>
+        </section></div>
     </article>
-    <hr>
+    <hr style="clear:both">
     <dl class="layout-hint">
         <dt>data-backend-url:</dt><dd>/shariff/</dd>
         <dt>data-theme:</dt><dd>white</dd>
