--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="http://www.heise.de/" rel="canonical">
     <meta property="DC.title" content="Shariff demo page">
     <meta name="DC.creator" content="heise online">
+    <style>article.slim {max-width:1200px}</style>
 </head>
 <body>
     <dl class="layout-hint">
@@ -57,7 +58,7 @@
         <dt>data-title:</dt><dd>Lorem ipsum</dd>
         <dt>data-url:</dt><dd>http://www.heise.de/ct/</dd>
     </dl>
-    <article class="slim">
+    <article class="slim" style="width:30%">
         <header>
             <h1>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</h1>
             <div data-backend-url="counts.json" class="shariff" data-services="[&quot;whatsapp&quot;,&quot;facebook&quot;,&quot;twitter&quot;,&quot;googleplus&quot;,&quot;mail&quot;,&quot;info&quot;]" data-mail-url="mailto:foo@example.com" data-lang="en" data-title="Lorem ipsum"></div>
