--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	</style>
 </head>
 <body>
-        	<h1 style="text-align:center"><a href="https://github.com/craiq/shariff/tree/Craiq/FB-like">Link zum Github Branch</a></h1>
+        	<h1 style="text-align:center"><a href="https://github.com/craiq/shariff/">Link zum Github Branch</a></h1>
             <hr>
     <dl class="layout-hint">
     </dl>
