--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="utf-8"/>
     <title>Demonstration: Shariff</title>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" type="text/css" href="app.min.css">
     <link href="http://www.heise.de/" rel="canonical">
     <meta property="DC.title" content="Shariff demo page">
@@ -52,7 +61,7 @@
     <article class="slim">
         <header>
             <h1>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</h1>
-            <div data-backend-url="counts.json" class="shariff" data-services="[&quot;whatsapp&quot;,&quot;facebook&quot;,&quot;xing&quot;,&quot;pinterest&quot;,&quot;linkedin&quot;,&quot;googleplus&quot;,&quot;twitter&quot;,&quot;mail&quot;,&quot;info&quot;]" data-media-url="http://www.heise.de/imgs/18/1/4/8/0/5/6/9/wa-encryption-d1999f774c5b5757.png"></div>
+            <div data-backend-url="counts.json" class="shariff" data-theme="circle-color" data-services="[&quot;whatsapp&quot;,&quot;facebook&quot;,&quot;xing&quot;,&quot;pinterest&quot;,&quot;linkedin&quot;,&quot;googleplus&quot;,&quot;twitter&quot;,&quot;mail&quot;,&quot;info&quot;]" data-media-url="http://www.heise.de/imgs/18/1/4/8/0/5/6/9/wa-encryption-d1999f774c5b5757.png"></div>
         </header>
         <p class="deck">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
     </article>
@@ -68,7 +77,7 @@
     <article class="slim">
         <header>
             <h1>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</h1>
-            <div class="shariff" data-flattrid="flattr" data-flattrurl="http://developers.flattr.net" data-services="[&quot;flattr&quot;,&quot;facebooklike&quot;,&quot;googleplusplus&quot;,&quot;tumblr&quot;,&quot;more&quot;,&quot;diaspora&quot;,&quot;reddit&quot;,&quot;stumbleupon&quot;,&quot;bitcoin&quot;]" data-btc="1NsmjJCWeZtgeyMEzuMThx2WQTAB5huVKZ" data-btcAmount="0.1"></div>
+            <div class="shariff" data-theme="circle-white" data-flattrid="flattr" data-flattrurl="http://developers.flattr.net" data-services="[&quot;flattr&quot;,&quot;facebooklike&quot;,&quot;googleplusplus&quot;,&quot;tumblr&quot;,&quot;more&quot;,&quot;diaspora&quot;,&quot;reddit&quot;,&quot;stumbleupon&quot;,&quot;bitcoin&quot;,&quot;addthis&quot;]" data-btc="1NsmjJCWeZtgeyMEzuMThx2WQTAB5huVKZ" data-btcAmount="0.1"></div>
         </header>
         <p class="deck">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
     </article>
