--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ http://www.heise.de/imgs/18/1/4/8/0/5/6/9/wa-encryption-d1999f774c5b5757.png</dd
     <hr>
     <dl class="layout-hint">
         <dt>data-backend-url:</dt><dd>/shariff/</dd>
-        <dt>data-theme:</dt><dd>/circle-white/</dd>
+        <dt>data-theme:</dt><dd>circle-white</dd>
         <dt>data-services:</dt><dd>[&amp;quot;flattr&amp;quot;,&amp;quot;facebooklike&amp;quot;,&amp;quot;googleplusplus&amp;quot;,&amp;quot;tumblr&amp;quot;,&quot;more&quot;,&amp;quot;diaspora&amp;quot;,&amp;quot;reddit&amp;quot;,&amp;quot;stumbleupon&amp;quot;,&amp;quot;bitcoin&amp;quot;]</dd>
         <dt>data-flattrid:</dt><dd>flattr</dd>
         <dt>data-flattrurl:</dt><dd>http://developers.flattr.net</dd>
