--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ http://www.heise.de/imgs/18/1/4/8/0/5/6/9/wa-encryption-d1999f774c5b5757.png</dd
     <article class="slim">
         <header>
             <h1>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</h1>
-            <div class="shariff" data-theme="circle-white" data-flattrid="flattr" data-flattrurl="http://developers.flattr.net" data-services="[&quot;flattr&quot;,&quot;facebooklike&quot;,&quot;googleplusplus&quot;,&quot;tumblr&quot;,&quot;more&quot;,&quot;diaspora&quot;,&quot;reddit&quot;,&quot;stumbleupon&quot;,&quot;bitcoin&quot;,&quot;addthis&quot;]" data-btc="1NsmjJCWeZtgeyMEzuMThx2WQTAB5huVKZ" data-btcAmount="0.1"></div>
+            <div class="shariff" data-backend-url="counts.json" data-theme="circle-white" data-flattrid="flattr" data-flattrurl="http://developers.flattr.net" data-services="[&quot;flattr&quot;,&quot;facebooklike&quot;,&quot;googleplusplus&quot;,&quot;tumblr&quot;,&quot;more&quot;,&quot;diaspora&quot;,&quot;reddit&quot;,&quot;stumbleupon&quot;,&quot;bitcoin&quot;,&quot;addthis&quot;]" data-btc="1NsmjJCWeZtgeyMEzuMThx2WQTAB5huVKZ" data-btcAmount="0.1"></div>
         </header>
         <p class="deck">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
     </article>
