--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@ http://www.heise.de/imgs/18/1/4/8/0/5/6/9/wa-encryption-d1999f774c5b5757.png</dd
     <hr style="clear:both">
     <dl class="layout-hint">
         <dt>data-backend-url:</dt><dd>/shariff/</dd>
-        <dt>data-theme:</dt><dd>white</dd>
+        <dt>data-theme:</dt><dd>circle-grey</dd>
         <dt>style:</dt><dd>max-width:590px;text-align:center</dd>
         <dt>data-orientation:</dt><dd>horizontal</dd>
     </dl>
     <article class="slim">
         <header>
             <h1>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</h1>
-            <div style="max-width:590px;text-align:center" data-backend-url="counts.json" data-orientation="horizontal" data-theme="white" class="shariff" data-services="[&quot;facebook&quot;,&quot;twitter&quot;,&quot;googleplus&quot;,&quot;mail&quot;,&quot;info&quot;]"></div>
+            <div style="max-width:590px;text-align:center" data-backend-url="counts.json" data-orientation="horizontal" data-theme="circle-grey" class="shariff" data-services="[&quot;facebook&quot;,&quot;twitter&quot;,&quot;googleplus&quot;,&quot;mail&quot;,&quot;info&quot;]"></div>
         </header>
         <p class="deck">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
     </article>
