--- a/index.html
+++ b/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <title>Demonstration: Shariff</title>
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <title>Demo Page: Shariff</title>
+<!-- Latest compiled and minified CSS 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+<!-- Optional theme
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css"> -->
 
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" type="text/css" href="app.min.css">
     <link href="http://www.heise.de/" rel="canonical">
@@ -71,7 +69,7 @@ http://www.heise.de/imgs/18/1/4/8/0/5/6/9/wa-encryption-d1999f774c5b5757.png</dd
     <dl class="layout-hint">
         <dt>data-backend-url:</dt><dd>/shariff/</dd>
         <dt>data-theme:</dt><dd>circle-white</dd>
-        <dt>data-services:</dt><dd>[&amp;quot;flattr&amp;quot;,&amp;quot;facebooklike&amp;quot;,&amp;quot;googleplusplus&amp;quot;,&amp;quot;tumblr&amp;quot;,&quot;more&quot;,&amp;quot;diaspora&amp;quot;,&amp;quot;reddit&amp;quot;,&amp;quot;stumbleupon&amp;quot;,&amp;quot;bitcoin&amp;quot;]</dd>
+        <dt>data-services:</dt><dd>[&amp;quot;flattr&amp;quot;,&amp;quot;facebooklike&amp;quot;,&amp;quot;googleplusplus&amp;quot;,&amp;quot;tumblr&amp;quot;,&amp;quot;more&amp;quot;,&amp;quot;diaspora&amp;quot;,&amp;quot;reddit&amp;quot;,&amp;quot;stumbleupon&amp;quot;,&amp;quot;bitcoin&amp;quot;]</dd>
         <dt>data-flattrid:</dt><dd>flattr</dd>
         <dt>data-flattrurl:</dt><dd>http://developers.flattr.net</dd>
         <dt>data-btc:</dt><dd>1NsmjJCWeZtgeyMEzuMThx2WQTAB5huVKZ</dd>
@@ -80,7 +78,7 @@ http://www.heise.de/imgs/18/1/4/8/0/5/6/9/wa-encryption-d1999f774c5b5757.png</dd
     <article class="slim">
         <header>
             <h1>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</h1>
-            <div class="shariff" data-backend-url="counts.json" data-theme="circle-white" data-flattrid="flattr" data-flattrurl="http://developers.flattr.net" data-services="[&quot;flattr&quot;,&quot;facebooklike&quot;,&quot;googleplusplus&quot;,&quot;tumblr&quot;,&quot;more&quot;,&quot;diaspora&quot;,&quot;reddit&quot;,&quot;stumbleupon&quot;,&quot;bitcoin&quot;,&quot;addthis&quot;]" data-btc="1NsmjJCWeZtgeyMEzuMThx2WQTAB5huVKZ" data-btcAmount="0.1"></div>
+            <div class="shariff" data-backend-url="counts.json" data-theme="circle-white" data-flattrid="flattr" data-flattrurl="http://developers.flattr.net" data-services="[&quot;flattr&quot;,&quot;facebooklike&quot;,&quot;googleplusplus&quot;,&quot;tumblr&quot;,&quot;more&quot;,&quot;diaspora&quot;,&quot;linkedin&quot;,&quot;reddit&quot;,&quot;stumbleupon&quot;,&quot;bitcoin&quot;,&quot;addthis&quot;]" data-btc="1NsmjJCWeZtgeyMEzuMThx2WQTAB5huVKZ" data-btcAmount="0.1"></div>
         </header>
         <p class="deck">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
     </article>
@@ -166,10 +164,14 @@ http://www.heise.de/imgs/18/1/4/8/0/5/6/9/wa-encryption-d1999f774c5b5757.png</dd
     <article class="slim">
         <header>
             <h1>Lorem ipsum dolor sit amet, consectetuer adipiscing elit</h1>
-            <div data-backend-url="counts.json" data-theme="white" class="shariff" data-services="[&quot;facebook&quot;,&quot;twitter&quot;,&quot;googleplus&quot;,&quot;mail&quot;,&quot;info&quot;]"></div>
+            <div data-backend-url="counts.json" data-theme="white" class="shariff" data-services="[&quot;facebook&quot;,&quot;facebooklike&quot;,&quot;twitter&quot;,&quot;googleplus&quot;,&quot;mail&quot;,&quot;info&quot;]"></div>
         </header>
         <p class="deck">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
     </article>
     <script src="app.min.js"></script>
+<!--<script src="jquery-1.11.3.min.js"></script>
+ Latest compiled and minified JavaScript 
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script src="test.js"></script>-->
 </body>
 </html>
