--- a/index.html
+++ b/index.html
@@ -2,14 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo Page: Shariff</title>
-<!-- Latest compiled and minified CSS 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
-
-<!-- Optional theme
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css"> -->
-
-
     <link rel="stylesheet" type="text/css" href="app.min.css">
     <link href="http://www.heise.de/" rel="canonical">
     <meta property="DC.title" content="Shariff demo page">
@@ -36,6 +30,10 @@
 			clear: both;
 		}
 	}
+	dt, dd {
+		word-wrap:break-word;
+	}
+	
 	</style>
 </head>
 <body>
@@ -169,9 +167,5 @@ http://www.heise.de/imgs/18/1/4/8/0/5/6/9/wa-encryption-d1999f774c5b5757.png</dd
         <p class="deck">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
     </article>
     <script src="app.min.js"></script>
-<!--<script src="jquery-1.11.3.min.js"></script>
- Latest compiled and minified JavaScript 
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script src="test.js"></script>-->
 </body>
 </html>
